force-app/main/default/objects/CARE_Income_Document_Type__c/CARE_Income_Document_Type__c.object-meta.xml
<CustomObject>
    <label>CARE Income Document Type</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CARE Income Document Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>