force-app/main/default/objects/CARE_Income_Document_Type__c/fields/Doc_Type_No__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Doc Type No</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>