force-app/main/default/objects/CARE_Income_Document_Type__c/fields/END_DATE__c.field-meta.xml
<CustomField>
    <fullName>END_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>END DATE</label>
    <required>true</required>
    <type>Date</type>
</CustomField>