force-app/main/default/objects/CARE_Income_Document_Type__c/fields/IS_FIXED_INCOME__c.field-meta.xml
<CustomField>
    <fullName>IS_FIXED_INCOME__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS FIXED INCOME</label>
    <type>Checkbox</type>
</CustomField>