force-app/main/default/objects/CARE_Income_Document_Type__c/validationRules/Maintain_Name_Uniqueness.validationRule-meta.xml
<ValidationRule>
    <fullName>Maintain_Name_Uniqueness</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Name = VLOOKUP($ObjectType.CARE_Income_Document_Type__c.Fields.Name , $ObjectType.CARE_Income_Document_Type__c.Fields.Name, Name),
NOT(Id=VLOOKUP($ObjectType.CARE_Income_Document_Type__c.Fields.Id, $ObjectType.CARE_Income_Document_Type__c.Fields.Name, Name)))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Already a record exists with the same name.</errorMessage>
</ValidationRule>